<resources>
    <string name="app_name">Route Graduation Project</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="what_do_you_search_for">what do you search for?</string>
    <string name="one">one</string>
    <string name="nike_air_jordan">Nike Air Jordan</string>
    <string name="nike_shoes_flexible_for_wo">Nike shoes flexible for wo..</string>
    <string name="_2000_egp">2000 EGP</string>
    <string name="egp_1_200">EGP 1,200</string>
    <string name="review_4_6">Review (4.6)</string>
    <string name="review_4_5">Review (4.5)</string>
    <string name="_1_300_egp">1,300 EGP</string>
    <string name="review_4_8">Review (4.8)</string>
    <string name="Nike_air_jordan">Nike Air Jordan</string>
    <string name="review_4_4">Review (4.4)</string>
    <string name="_2_500_egp">2,500 EGP</string>
    <string name="egp_1_900">EGP 1,900</string>
    <string name="Nike_shoes_flexible_for_wo">Nike shoes flexible for wo..</string>
    <string name="six">six</string>
    <string name="button">button</string>
    <string name="review_4_7">Review (4.7)</string>
    <string name="star">star</string>
    <string name="_2_100_egp">2,100 EGP</string>
    <string name="egp_1_800">EGP 1,800</string>
    <string name="nike_Shoes_flexible_for_wo">Nike shoes flexible for wo..</string>
    <string name="nike_shoes_Flexible_for_wo">Nike shoes flexible for wo..</string>
    <string name="egp_1_500">EGP 1,500</string>
    <string name="nike_air_Jordan">Nike Air Jordan</string>
    <string name="four">four</string>
    <string name="btn">btn</string>
    <string name="egp_1_000">EGP 1,000</string>
    <string name="three">three</string>
    <string name="egp_1_100">EGP 1,100</string>
    <string name="_1_500_egp">1,500 EGP</string>
    <string name="route">route</string>
    <string name="cart">cart</string>
    <string name="title">title</string>
    <string name="plus">Plus</string>
    <string name="green">green</string>
    <string name="back">Back</string>
    <string name="product_details">Product Details</string>
    <string name="search">Search</string>
    <string name="_3_230_sold">3,230 Sold</string>
    <string name="_4_8_7_500">4.8 (7,500)</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="nike_is_a_multinational_corporation_that_designs_develops_and_sells_athletic_footwear_apparel_and_accessories_read_more">Nike is a multinational corporation that designs, develops, and sells athletic footwear ,apparel, and accessories......Read More</string>
    <string name="size">Size</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="color">Color</string>
    <string name="black">black</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="light">light</string>
    <string name="total_price">Total price</string>
    <string name="egp_3_500">EGP 3,500</string>
    <string name="_2">2</string>
    <string name="_2_000_egp">2,000 EGP</string>
    <string name="_5">5</string>
    <string name="item">item</string>
</resources>